font size updated for overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,7 @@
   padding: 3px;
   text-align: center;
   white-space: pre-wrap;
-  font-size: clamp(15px, 0.5vw, 16px);
+  font-size: clamp(10px, 0.5vw, 20px);
 }
 
 .game-off-junimo {
@@ -158,7 +158,7 @@
 }
 
 .font-small {
-  font-size: clamp(10px, 0.7vw, 12px);
+  font-size: clamp(10px, 1vw, 14px);
   margin-bottom: 8px;
 }
 
